--- a/templates/admin.html
+++ b/templates/admin.html
@@ -96,6 +96,7 @@
               <option value="BOARDING" {% if f.status=="BOARDING" %}selected{% endif %}>BOARDING</option>
               <option value="DELAY" {% if f.status=="DELAY" %}selected{% endif %}>DELAY</option>
               <option value="CANCEL" {% if f.status=="CANCEL" %}selected{% endif %}>CANCEL</option>
+              <option value="LANDED" {% if f.status=="LANDED" %}selected{% endif %}>LANDED</option>
             </select>
         
             <button type="submit">🔄</button>
@@ -115,3 +116,4 @@
 
 </body>
 </html>
+
