--- a/templates/index.html
+++ b/templates/index.html
@@ -83,6 +83,16 @@ function updateFIDSDateTime(){
 setInterval(updateFIDSDateTime, 1000);
 updateFIDSDateTime();
 </script>
+...
+</script>
+
+<div class="fids-watermark">
+  © SYUKURAN AMINUDDIN AIRPORT
+</div>
 
 </body>
 </html>
+
+</body>
+</html>
+
