--- a/static/style.css
+++ b/static/style.css
@@ -296,3 +296,26 @@ body.fids {
     font-weight: bold;
   }
 }
+/* =========================
+   WATERMARK FIDS
+========================= */
+.fids-watermark {
+  position: fixed;
+  bottom: 5px;
+  width: 100%;
+  text-align: center;
+  font-size: 12px;
+  color: rgba(255, 255, 255, 0.6);
+  letter-spacing: 1px;
+  pointer-events: none; /* tidak bisa diklik */
+  z-index: 999;
+}
+
+/* MODE HP */
+@media (max-width: 600px) {
+  .fids-watermark {
+    font-size: 10px;
+    bottom: 3px;
+  }
+}
+
