--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@ updateFIDSDateTime();
 </script>
 
 <div class="fids-watermark">
-  © SYUKURAN AMINUDDIN AIRPORT
+  © SYUKURAN AMINUDDIN AMIR AIRPORT
 </div>
 
 </body>
@@ -95,4 +95,5 @@ updateFIDSDateTime();
 
 </body>
 </html>
+
 
